syntax = "proto3";
package student;

option go_package = "studentpb";



message Student {

    string first_name = 1;
    string last_name = 2;

}


//register student
message RegisterStudentRequest {
    Student student = 1; 
}
message RegisterStudentResponse {
    string result = 1;
}


//get student list
message GetStudentListRequest {
    string college_name = 1;
}

message GetStudentListResponse {
    string student_name = 1;
    string college_name = 2;
}

message SendStudentDataRequest {
    Student student = 1;
}

message SendStudentDataResponse {
    string result = 1;
}


message SendStudentsDataRequest {
    Student student = 1;
}

message SendStudentsDataResponse {
    string result = 1;
}


service StudentService{
    //unary
    rpc registerStudent(RegisterStudentRequest) returns (RegisterStudentResponse){};

    //server streaming
    rpc getStudents(GetStudentListRequest) returns (stream GetStudentListResponse){};

    //client streaming
    rpc sendStudentData(stream SendStudentDataRequest) returns (SendStudentDataResponse) {};

    //BiDirectional streaming
    rpc sendStudentsData(stream SendStudentsDataRequest) returns (stream SendStudentsDataResponse) {};

}